Starting to use the backend

--- a/package.json
+++ b/package.json
@@ -2,14 +2,8 @@
   "name": "react-d3-sankey-chart",
   "version": "1.0.0",
   "description": "",
-  "keywords": [
-    "sankey",
-    "d3.js",
-    "chart",
-    "react",
-    "hooks"
-  ],
-  "main": "src/index.js",
+  "keywords": ["sankey", "d3.js", "chart", "react", "hooks"],
+  "main": "src/ui/index.js",
   "dependencies": {
     "@reach/router": "1.2.1",
     "d3": "5.15.0",
@@ -28,10 +22,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
 }
