--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "react": "16.8.5",
     "react-date-picker": "7.10.0",
     "react-dom": "16.8.5",
+    "react-redux": "7.1.3",
     "react-scripts": "2.1.8",
     "react-spring": "8.0.18",
     "redux": "4.0.5",
+    "redux-logger": "3.0.6",
+    "redux-thunk": "2.3.0",
     "styled-components": "5.0.0"
   },
   "devDependencies": {},
